--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "parse-server-example",
-  "version": "1.4.0",
-  "description": "An example Parse API server using the parse-server module",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ParsePlatform/parse-server-example"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "compression": "^1.7.0",
-    "express": "~4.11.x",
-    "kerberos": "~0.0.x",
-    "parse": "~1.8.0",
-    "parse-server": "*"
-  },
-  "scripts": {
-    "start": "node index.js"
-  },
-  "engines": {
-    "node": ">=4.3"
-  }
+    "name": "parse-express",
+    "version": "0.0.1",
+    "description": "Parse server express mod by cuduy197",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js --ignore public/"
+    },
+    "author": {
+        "email": "cuduy197@gmail.com",
+        "name": "cuduy197"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/cuduy197/parse-express"
+    },
+    "license": "MIT",
+    "dependencies": {
+        "compression": "^1.7.0",
+        "express": "~4.11.x",
+        "kerberos": "~0.0.x",
+        "parse": "*",
+        "parse-server": "*"
+    },
+
+    "engines": {
+        "node": ">=4.3"
+    }
 }
