--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Parse server express mod by cuduy197",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js --ignore public/"
+        "start": "nodemon index.js --ignore public/"
     },
     "author": {
         "email": "cuduy197@gmail.com",
@@ -18,7 +18,6 @@
     "dependencies": {
         "compression": "^1.7.0",
         "express": "~4.11.x",
-        "kerberos": "~0.0.x",
         "parse": "*",
         "parse-server": "*"
     },
