--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,5 +2,6 @@
     "compilerOptions": {
         "target": "ES6",
         "module": "commonjs"
-    }
+    },
+    "exclude": ["node_modules", "logs"]
 }
