--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "license": "MIT",
     "dependencies": {
+        "compression": "^1.7.0",
         "express": "latest",
         "parse": "latest",
         "parse-dashboard": "latest",
